--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
-
+    <meta name="google-site-verification" content="m9iq4VUnz4QBKpYQOGica-GCRWaYj8ibmecpY8KHfUc" />
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
